src/tests/testfiles/binary-operators/types-19.txt
Error at 2:5: Binary operator operands must have the same type (have float and char[])
4.6 / "a";
^
